# cbor_tags

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cbor_tags_config.h.in  conanfile.py  vcpkg.json
.github/workflows/: build.yml  macos.yml  quality.yml  ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt  README.md  main.cpp
benchmarks/custom_codec_1/: CMakeLists.txt  bench_custom_codec_1.cpp
benchmarks/decoder/: CMakeLists.txt  bench_decode_preflight.cpp  bench_decoder.cpp
benchmarks/encoder/: CMakeLists.txt  bench_encoder.cpp
benchmarks/include/: small_generator.h
benchmarks/old_benchmarks/: CMakeLists.txt
benchmarks/ranges/: CMakeLists.txt  bench_ranges.cpp
benchmarks/serialization_compare/: CMakeLists.txt  bench_serialization_compare.cpp
benchmarks/serialization_compare/schema/: comparison.fbs
benchmarks/typed_arrays/: CMakeLists.txt  bench_typed_arrays.cpp
cmake/: cbor_tags-config.cmake.in  cgen_project_init.cmake  cgen_require_tools.cmake  cgen_sanitizers.cmake  common_settings.cmake  create_tidy_target.cmake  get_cpm.cmake  installation_target.cmake  minimum_compiler.cmake  print_options.cmake  use_mold_linker.cmake
cmake/scripts/: run-parallel-tidy.sh
doc/: README_someip_tcp_udp_tests.md  README_someip_tests.md  cddl_handling.md  cddl_standard_coverage.md  codec_extensions.md  compact_tagged_codec.md  custom_codec_1.md  cwt.md  cxx26_named_maps.md  decoder_resource_limits.md  experimental_ranges.md  options.md  performance_regression_and_zero_copy_plan.md  range_handling.md  range_handling_design_experimental.md  rfc8746_typed_arrays.md  smart_pointers.md  someip_poc.md  streaming_decode_plan.md  testing.md  user_story_resumable_codec.md  user_story_review_followup.md  variant_handling.md
doc/test_readme/: CMakeLists.txt  md_extractor.cpp
examples/: CMakeLists.txt  basic_roundtrip.cpp  bounded_decode.cpp
include/cbor_tags/: cbor.h  cbor_concepts.h  cbor_concepts_checking.h  cbor_decoder.h  cbor_detail.h  cbor_element_iterator.h  cbor_encoder.h  cbor_extensions.h  cbor_integer.h  cbor_lazy_tags.h  cbor_lazy_tags_impl.h  cbor_negative.h  cbor_operators.h  cbor_range_encoder.h  cbor_ranges.h  cbor_raw_view_encoder.h  cbor_raw_views.h  cbor_reflection.h  cbor_reflection_config.h  cbor_reflection_count.h  cbor_reflection_impl.h  cbor_reflection_named.h  cbor_reflection_pfr.h  cbor_reflection_std.h  cbor_segments.h  cbor_simple.h  cbor_typed_arrays.h  cbor_variant_hash.h  cbor_variant_traits.h  float16_ieee754.h  variant_handling.h
include/someip/: status.h
python-bindings/: CMakeLists.txt  Dockerfile  binding_generator.cpp  main.py  python_bindings_example.cpp  readme.md  struct_example.h
python-bindings/include/: ast_actions.hpp  include_tracker.hpp  visitor.hpp
python-bindings/tests/: CMakeLists.txt  main2.py
results/: batch-cbor-fix-shape-review-20260506-buffer-concepts.md  batch-cbor-fix-shape-review-20260506-lazy-tags.md  batch-cbor-fix-shape-review-20260506-ranges.md  batch-cbor-range-review-20260506-concepts.md  batch-cbor-range-review-20260506-scanner.md  batch-cbor-range-review-20260506-tests.md
results/cbor-range-finding-proofs/: README.md  compile_fail_rvalue_range.cpp  compile_fail_subrange_encoder.cpp  proof_find_tags_temporary_dangles.cpp  run-proofs.sh  (+3 more)
scripts/: coverage.sh  format-cxx.sh  lint-cxx.sh  run-comparison-benchmarks.sh  run-installed-consumer.sh
test/: CMakeLists.txt  cbor_error_handling.cpp  cbor_status_handling.cpp  cddl_bounded_fixed_string_compile_fail.cc  cddl_shared_graph_nested_scope_compile_fail.cc  cddl_shared_graph_variant_any_tag_compile_fail.cc  cddl_shared_graph_variant_array_compile_fail.cc  cddl_shared_graph_variant_map_pointer_compile_fail.cc  cddl_shared_graph_variant_multiple_pointers_compile_fail.cc  cddl_shared_graph_variant_nested_any_tag_compile_fail.cc  cddl_shared_graph_variant_nested_pointer_compile_fail.cc  cddl_shared_graph_variant_optional_pointer_compile_fail.cc  cddl_shared_graph_variant_tag29_compile_fail.cc  cddl_shared_graph_variant_tag_compile_fail.cc  cddl_shared_graph_variant_vector_array_compile_fail.cc  cddl_variant_any_tag_compile_fail.cc  cddl_variant_duplicate_tags_compile_fail.cc  cddl_variant_dynamic_tag_compile_fail.cc  cddl_variant_nested_any_tag_compile_fail.cc  cddl_variant_nested_duplicate_tags_compile_fail.cc  cddl_variant_nullable_pointer_compile_fail.cc  cddl_variant_optional_duplicate_tags_compile_fail.cc  cddl_variant_ref_duplicate_tags_compile_fail.cc  cddl_variant_static_tag_compile_fail.cc  cddl_variant_structural_duplicate_tags_compile_fail.cc  cddl_variant_traits_duplicate_tags_compile_fail.cc  dynamic_bounded_size_cddl_compile_fail.cc  dynamic_bounded_size_container_decode_compile_fail.cc  dynamic_bounded_size_nested_compile_fail.cc  dynamic_bounded_size_optional_decode_compile_fail.cc  dynamic_bounded_size_variant_decode_compile_fail.cc  expect_compile_failure.cmake  incompatible_codec_result_compile_fail.cc  main.cpp  named_map_duplicate_keys_compile_fail.cc  named_map_extension_fields_compile_fail.cc  smart_ptr_variant_array_compile_fail.cc  smart_ptr_variant_shared_graph_vector_array_compile_fail.cc  smart_ptr_variant_two_nullable_compile_fail.cc  test_bounded_size.cpp  (+80 more)
test/consumer/stl_only/: CMakeLists.txt  direct_type_name_header.cc  main.cc
test/cpp23/: CMakeLists.txt  test_cbor_iterator.cpp
test/fuzz/: fuzztest_someip.cpp
test/include/: test_util.h
test/interop/: CMakeLists.txt  README.md  cbor_diag_vectors.cc  glaze_cbor_roundtrip.cc  nlohmann_cbor_roundtrip.cc
test/interop/rust_cbor_diag/: Cargo.toml
test/interop/rust_cbor_diag/src/: main.rs
test/vsomeip/: vsomeip_e2e.cpp  vsomeip_interop_e2e.cpp
test/vsomeip/conf/: vsomeip_tcp.json  vsomeip_tcp_client.json  vsomeip_tcp_server.json  vsomeip_udp.json  vsomeip_udp_client.json  vsomeip_udp_server.json
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
test_util/: cbor_roundtrip.h  small_generator.h  test_util.h
tools/: CMakeLists.txt  cbor_tags_cli.cpp  cbor_tags_tidy.cpp  reflection_module_generator.cpp  std_reflection_smoke.cpp
(+48 files in other folders)
